updated aar file

--- a/Android/LiveChatInc.Android/LiveChatInc.Android/LiveChatInc.Android.csproj
+++ b/Android/LiveChatInc.Android/LiveChatInc.Android/LiveChatInc.Android.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="Jars\livechatinc.android-release.aar" />
+    <LibraryProjectZip Include="Jars\inappchat-release.aar" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
